--- a/header.html
+++ b/header.html
@@ -1,4 +1,20 @@
-<div class="container">
-	<p class="h1 text-center">Dayz Standalone Server Customizer 2.0</p>
-	<p class="text-center">Made by <mark><a href="https://www.reddit.com/u/nixonhenrixon">/u/nixonhenrixon</a></mark> | Verified with dayz version: <mark>0.63.552454</mark></p>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>DSSC - Dayz standalone server customizer</title>
+	<meta charset="utf-8" />
+	<link rel="icon" type="image/png" href="favicon.png" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/dssc.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+</head>
+<body>
+<section class="header">
+	<div class="container">
+		<p class="h1 text-center">Dayz Standalone Server Customizer 2.0</p>
+		<p class="text-center">Made by <mark><a href="https://www.reddit.com/u/nixonhenrixon">/u/nixonhenrixon</a></mark> | Verified with dayz version: <mark>0.63.552454</mark></p>
+	</div>
+</section>
+
+
+
