Added drag and drop

--- a/header.html
+++ b/header.html
@@ -7,12 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/dssc.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<script src="js/upload.js"></script>
 </head>
 <body>
 <section class="header">
 	<div class="container">
-		<p class="h1 text-center">Dayz Standalone Server Customizer 2.0</p>
-		<p class="text-center">Made by <mark><a href="https://www.reddit.com/u/nixonhenrixon">/u/nixonhenrixon</a></mark> | Verified with dayz version: <mark>0.63.552454</mark></p>
+		<p class="h1 text-center">Dayz Standalone Server Customizer</p>
+		<p class="text-center">Made by <mark><a href="https://www.reddit.com/u/nixonhenrixon">/u/nixonhenrixon</a> & <a href="https://www.reddit.com/u/ijigg_">/u/ijigg_</a></mark> | Verified with dayz version: <mark>0.63.552454</mark></p>
 	</div>
 </section>
 
