--- a/header.html
+++ b/header.html
@@ -8,6 +8,11 @@
 	<link rel="stylesheet" type="text/css" href="css/dssc.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<script src="js/upload.js"></script>
+
+	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+	<script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+
 </head>
 <body>
 <section class="header">
@@ -16,6 +21,3 @@
 		<p class="text-center">Made by <mark><a href="https://www.reddit.com/u/nixonhenrixon">/u/nixonhenrixon</a> & <a href="https://www.reddit.com/u/ijigg_">/u/ijigg_</a></mark> | Verified with dayz version: <mark>0.63.552454</mark></p>
 	</div>
 </section>
-
-
-
