--- a/header.html
+++ b/header.html
@@ -18,6 +18,8 @@
 <section class="header">
 	<div class="container">
 		<p class="h1 text-center">Dayz Standalone Server Customizer</p>
-		<p class="text-center">Made by <mark><a href="https://www.reddit.com/u/nixonhenrixon">/u/nixonhenrixon</a> & <a href="https://www.reddit.com/u/ijigg_">/u/ijigg_</a></mark> | Verified with dayz version: <mark>0.63.552454</mark></p>
+		<p class="text-center">Made by <mark><a href="https://www.reddit.com/u/nixonhenrixon">/u/nixonhenrixon</a> & <a href="https://www.reddit.com/u/ijigg_">/u/ijigg_</a></mark> | Verified with dayz version: <mark>0.63.552454</mark><br/>
+		<span class="cookies">This site uses cookies to store some useless values</span>
+		</p>
 	</div>
 </section>
