--- a/header.html
+++ b/header.html
@@ -4,15 +4,12 @@
 	<title>DSSC - Dayz standalone server customizer</title>
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/png" href="favicon.png" />
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/dssc.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<script src="js/upload.js"></script>
-
 	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 	<script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
-
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" async defer>
+	<link rel="stylesheet" type="text/css" href="css/dssc.css" async defer>
+	<script src="js/upload.js"></script>
 </head>
 <body>
 <section class="header">
