Instert serious commit message ¯\_(ツ)_/¯

--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-	<script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+	<script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js" crossorigin></script>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" async defer>
 	<link rel="stylesheet" type="text/css" href="css/dssc.css" async defer>
 	<script src="js/upload.js"></script>
